--- a/templates/admin/reset_password.html
+++ b/templates/admin/reset_password.html
@@ -1,17 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reset Password</title>
-</head>
-<body>
-    <form  method="post">
-        {{ form.hidden_tag() }}
-        <br>
-        {{ form.person.label }} {{ form.person }}
-        <br>
-        {{ form.submit }}
-    </form>
+{%extends 'base.html' %}
+
+{%block title%}
+Reset Password
+{% endblock %}
+
+{% block header%}
+Reset Password
+{% endblock  %}
+
+{% block anchor%}
+<a href="{{ url_for('get_persons') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
+{% endblock  %}
+
+{%block content%}
+<body id="form">
+    <div class="full-form-content">
+
+        <div class="form-wrapper" id="long-form">
+            <form  method="post">
+
+                {{ form.hidden_tag() }}
+                <h1>Reset Password</h1>
+                
+                <div class="form-label">
+                {{ form.person.label(class_='input-label') }} <br></div>
+                
+                <div class="form-box">
+                {{ form.person(class_="input")}}
+                <br></div>
+
+                <div class="button-wrapper">
+                {{ form.submit(class="button") }}
+                </div>
+
+            </form>
+        </div>
+    </div>
 </body>
-</html>
+{%endblock%}
