--- a/templates/admin/ledger.html
+++ b/templates/admin/ledger.html
@@ -1,20 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ledger</title>
-</head>
-<body>
+{%extends 'base.html' %}
+
+{%block title%}
+Ledger
+{% endblock %}
+
+{% block header%}
+Ledger
+{% endblock  %}
+
+{% block anchor%}
+<a href="{{ url_for('get_persons') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
+{% endblock  %}
+
+{%block content%}
+<body id="form">
+    <div class="full-form-content">
+
+    <div class="form-wrapper" id="long-form">
     <form method="POST">
         {{ form.hidden_tag() }}
+
+        <h1>Ledger</h1>
+        <div class="form-label">
+            {{ form.name.label(class_='input-label')}} <br>
+        </div>
+
+        <div class="form-box">
+            {{ form.name(class_="input") }} <br>
+        </div>
+
+        <div class="form-label">
+            {{ form.description.label(class_='input-label') }} <br>
+            </div>
+    
+            <div class="form-box">
+            {{ form.description(class_="input") }}
+            <br></div>
         <br>
-        {{ form.name.label }} {{ form.name() }}
-        <br>
-        {{ form.description.label }} {{ form.description() }}
-        <br>
-        {{ form.submit.label }} {{ form.submit() }}
+        
+        <!-- {{ form.submit.label }}  -->
+        <div class="button-wrapper">
+        {{ form.submit(class="button") }}</div>
         
     </form>
+</div>
+</div>
 </body>
-</html>
+
+{%endblock%}
