--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,9 @@
     <title>{% block title %}{% endblock  %}</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
     <link rel="stylesheet" href="\static\css\style.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
-<body>
+<body class='index'>
     <header class="dashboard">
         <section id="nav">
             {%block anchor%}<a href="{{url_for('dashboard')}}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>{%endblock%}
