--- a/templates/forms/bank_form.html
+++ b/templates/forms/bank_form.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Create Bank</title>
-</head>
-<body>
-    <h1>Create Bank</h1>
+{%extends 'base.html' %}
+
+{%block title%}
+Create Bank
+{% endblock %}
+
+{% block header%}
+Create Bank
+{% endblock  %}
+
+{% block anchor%}
+<a href="{{ url_for('get_persons') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
+{% endblock  %}
+
+{%block content%}
+<body id="form">
+    <div class="full-form-content">
     {% with messages = get_flashed_messages() %}
     {% if messages %}
         <ul class="flash-messages">
@@ -15,12 +25,33 @@
     {% endif %}
     {% endwith %}
 
-    <form method="POST">
-        {{ form.hidden_tag() }}
-        {{ form.name.label }} {{ form.name() }}
-        {{ form.balance.label }} {{ form.balance() }}
-        <br>
-        <input type="submit" value="Create">
-    </form>
+   <div class="form-wrapper"> 
+        <form method="POST">
+            {{ form.hidden_tag() }}
+
+            <div class="form-label">
+                {{ form.name.label(class_='input-label')}} <br>
+            </div>
+
+            <div class="form-box">
+                {{ form.name(class_="input") }} <br>
+            </div>
+
+            <div class="form-label">
+                {{ form.balance.label(class_='input-label')}} <br>
+            </div>
+
+            <div class="form-box">
+                {{ form.balance(class_="input") }}
+            <br>
+            </div>
+
+            <div class="button-wrapper">
+                <input type="submit" value="Create" class="button">
+            </div>
+        </form>
+    </div>
+</div>
 </body>
-</html>
+
+{%endblock%}
