--- a/templates/forms/startup.html
+++ b/templates/forms/startup.html
@@ -1,13 +1,36 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Start Up File</title>
-</head>
-<body>
-    <h1>Upload Excel File</h1>
-    <form method="POST" enctype="multipart/form-data">
-        <input type="file" name="file" accept=".xlsx, .xls">
-        <input type="submit" value="Upload">
-    </form>
+{%extends 'base.html' %}
+
+{%block title%}
+Upload Excel File
+{% endblock %}
+
+{% block header%}
+Upload Excel File
+{% endblock  %}
+
+{% block anchor%}
+<a href="{{ url_for('get_persons') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
+{% endblock  %}
+
+{%block content%}
+<body id="form">
+    <div class="full-form-content">
+
+        <div class="form-wrapper" >
+            <form method="POST" enctype="multipart/form-data">
+
+                <h1>Upload Excel File</h1>
+
+                <div class="form-box">
+                <input type="file" name="file" accept=".xlsx, .xls" class="input">
+                </div>
+
+                
+                <div class="button-wrapper">
+                <input type="submit" value="Upload" class="button"></div>
+            </form>
+        </div>
+    </div>
 </body>
-</html>
+
+{%endblock%}
