--- a/templates/forms/upload.html
+++ b/templates/forms/upload.html
@@ -1,19 +1,53 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Upload Excel File</title>
-</head>
-<body>
-    <h1>Upload Excel File</h1>
-    <form method="POST" enctype="multipart/form-data">
-        <input type="file" name="file" accept=".xlsx, .xls">
-        <input type="submit" value="Upload">
-        {{ form.hidden_tag() }}
-        <br>
-        {{ form.date.label }} {{ form.date() }}
-        <br>
-        {{ form.description.label }} {{ form.description() }}
-        <br>
-    </form>
+{%extends 'base.html' %}
+
+{%block title%}
+Upload Excel File
+{% endblock %}
+
+{% block header%}
+Upload Excel File
+{% endblock  %}
+
+{% block anchor%}
+<a href="{{ url_for('get_persons') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
+{% endblock  %}
+
+{%block content%}
+<body id="form">
+    <div class="full-form-content">
+
+        <div class="form-wrapper" id="long-form">
+            <form method="POST" enctype="multipart/form-data">
+
+                {{ form.hidden_tag() }}
+
+                <h1>Upload Excel File</h1>
+
+                <div class="form-label">
+                {{ form.date.label (class_='input-label')}} <br>
+                </div>
+        
+                <div class="form-box">
+                {{ form.date(class_="input") }}
+                <br></div>
+
+                <div class="form-label">
+                {{ form.description.label(class_='input-label') }} <br>
+                </div>
+
+                <div class="form-box">
+                {{ form.description(class_="input") }}
+                <br></div>
+
+                <input type="file" name="file" accept=".xlsx, .xls" class='input'>
+
+                
+                <div class="button-wrapper">
+                <input type="submit" value="Upload" class="button"></div>
+              
+            </form>
+        </div>
+    </div>
 </body>
-</html>
+
+{%endblock%}
